[package]
name = "emojid"
version = "0.3.1"
edition = "2021"

[dependencies]
eframe = { version = "0.26", default-features = false, features = [
    "wayland",
    "glow",
    "default_fonts",
] }
arboard = "3.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"


[profile.dev]
incremental = true

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]
